@@ -1,3 +1,7 @@
+2012-01-27  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* shptree.c: optimize quadtree generation (gdal #4472)
+
 2012-01-24  Frank Warmerdam  <warmerdam@google.com>
 
 	* shpopen.c: fix memory leaks on failure to open .shp file.
